<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_margin="@dimen/margin"
        android:id="@+id/tv_pertemuan_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_pertemuan_title"
        android:textColor="@color/black"
        android:textSize="@dimen/size_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_marginLeft="@dimen/margin"
            android:id="@+id/tv_pertemuan_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_pertemuan_nama"
            android:textColor="@color/black"
            android:textSize="@dimen/size_form"/>

        <EditText
            android:layout_marginLeft="@dimen/margin_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/et_pertemuan_nama"
            android:hint="@string/et_hint_nama"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_marginLeft="@dimen/margin"
            android:id="@+id/tv_pertemuan_doc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_pertemuan_dokter"
            android:textColor="@color/black"
            android:textSize="@dimen/size_form"/>

        <Spinner
            android:layout_marginLeft="@dimen/margin_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dropdown_dokter"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_marginLeft="@dimen/margin"
            android:id="@+id/tv_pertemuan_keluhan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_pertemuan_keluhan"
            android:textColor="@color/black"
            android:textSize="@dimen/size_form"/>

        <EditText
            android:layout_marginLeft="@dimen/margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/et_pertemuan_keluhan"
            android:hint="@string/et_hint_keluhan"/>
    </LinearLayout>

    <!-- https://www.tutlane.com/tutorial/android/android-datepicker-with-examples -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_marginLeft="@dimen/margin"
            android:id="@+id/tv_pertemuan_tanggal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_pertemuan_tanggal"
            android:textColor="@color/black"
            android:textSize="@dimen/size_form"/>

        <EditText
            android:inputType="date"
            android:layout_marginLeft="@dimen/margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/form_tanggal"
            android:hint="@string/et_hint_tanggal"
            android:datePickerMode="calendar"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_marginLeft="@dimen/margin"
            android:id="@+id/tv_pertemuan_waktu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_pertemuan_waktu"
            android:textColor="@color/black"
            android:textSize="@dimen/size_form"/>

        <EditText
            android:layout_marginLeft="@dimen/margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/form_waktu"
            android:hint="@string/et_hint_waktu"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_margin="@dimen/margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_simpan"
            android:id="@+id/btn_simpan_pertemuan"
            android:backgroundTint="@color/grey"
            android:textColor="@color/black" />
    </LinearLayout>

</LinearLayout>