<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_left_home"
            android:backgroundTint="@color/grey"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/btn_pertemuan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_left_appoint"
            android:backgroundTint="@color/grey"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/btn_dokter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_left_doc"
            android:backgroundTint="@color/grey"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/btn_pengaturan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_left_set"
            android:backgroundTint="@color/grey"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_left_exit"
            android:backgroundTint="@color/grey"
            android:textColor="@color/black"/>

    </LinearLayout>
</FrameLayout>