<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <TextView
            android:id="@+id/tv_main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_main_title"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/size_title"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <TextView
            android:layout_margin="@dimen/margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_main_subtitle"
            android:text="@string/tv_main_subtitle"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_gravity="center"/>
        <Button
            android:layout_marginTop="@dimen/margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_main_title"
            android:id="@+id/btn_mulai"
            android:backgroundTint="@color/grey"
            android:textColor="@color/black"
            android:layout_centerInParent="true"
            android:layout_gravity="center"/>
</LinearLayout>